--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
 - "2.7"
 - "3.5"
-install: "pip install -r requirements.txt"
+before_install: 
+- pip install -r requirements.txt
 script: 
 - py.test
+after_success:
+- coveralls
